--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -11,3 +11,10 @@
 .card-text {
     min-height: 150px;
 }
+
+/* mobile fix */
+@media only screen and (max-width: 352px) { 
+    .material-icons {
+        font-size: 21px;
+    }
+}
