--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,6 +15,6 @@
 /* mobile fix */
 @media only screen and (max-width: 384px) { 
     .material-icons {
-        font-size: 21px;
+        font-size: 21px !important;
     }
 }
